gsm-system: add a null backend

Add a 'null' backend for gsm-system to deal with the case where we don't
have systemd and our version of upower is too new.

Without this fallback case, gnome-session segfaults on startup.

https://bugzilla.gnome.org/show_bug.cgi?id=721380